--- a/src/WorldTravel.Web/Pages/Shared/_ChatBot.cshtml
+++ b/src/WorldTravel.Web/Pages/Shared/_ChatBot.cshtml
@@ -13,8 +13,8 @@
             </button>
         </div>
         <ul class="messages">
-            <li class="other">Are we dogs??? 🐶</li>
-            <li class="self">no... we're human</li>
+            <li class="other">Are we human??? 🐶</li>
+            <li class="self">yes... we're human</li>
             <li class="self">......... -___-</li>
         </ul>
         <div class="footer">
