--- a/src/WorldTravel.Web/Pages/Shared/_Menu.cshtml
+++ b/src/WorldTravel.Web/Pages/Shared/_Menu.cshtml
@@ -27,8 +27,8 @@
                 </div>
                 <nav class="grid__item" id="AccessibleNav">
                     <ul id="siteNav" class="site-nav medium right hidearrow">
-                        <li class="lvl1"><a href="/Admin/Account/Login"><i class="fa fa-user-plus fa-fw"></i> @L["AdminPage"]</a></li>
-                        <li class="lvl1"><a href="/Country">@L["Countries"]</a></li>
+@*                        <li class="lvl1"><a href="/Admin/Account/Login"><i class="fa fa-user-plus fa-fw"></i> @L["AdminPage"]</a></li>
+*@                        <li class="lvl1"><a href="/Country">@L["Countries"]</a></li>
                         <li class="lvl1"><a href="#about">@*<i class="fa fa-plus fa-fw"></i>*@ @L["HowProcessWork"]</a></li>
                         <li class="lvl1"><a href="#contact" class="contantLink"><i class="fa fa-phone fa-fw"></i> @L["Contanct"]</a></li>
                     </ul>
