--- a/src/WorldTravel.Web/Pages/Country/Index.cshtml
+++ b/src/WorldTravel.Web/Pages/Country/Index.cshtml
@@ -21,7 +21,7 @@
     <div class="row">
         <!--Sidebar-->
         <div class="col-12 col-sm-12 col-md-3 col-lg-3 sidebar">
-            <div class="sidebar_tags">
+          @*  <div class="sidebar_tags">
                 <div class="sidebar_widget categories">
                     <div class="widget-title"><h2>Category</h2></div>
                     <div class="widget-content">
@@ -83,7 +83,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>*@
         </div>
         <!--End Sidebar-->
         <!--Main Content-->
@@ -98,23 +98,23 @@
                 <div class="row country-items">
                     @foreach (var countryContent in Model.CountryContent)
                     {
-                        <div class="col-12 col-sm-12 col-md-4 col-lg-4 article country-item">
+                        <div class="col-12 col-sm-12 col-md-4 col-lg-4 article country-item" style="padding: 20px;border: 2px solid #f9f9f9;">
                             <!-- Article Image -->
                             <a class="article_featured-image" href="/Country/Detail?Id=@countryContent.Id"><img width="287" height="124" class="blur-up lazyload" data-src="@countryContent.PreviewImageUrl" src="@countryContent.PreviewImageUrl" title="@countryContent.Title" alt="@L["ImageFailedToLoad"]"></a>
                             <h2 class="h3"><a href="/Country/Detail?Id=@countryContent.Id" class="counrtyTitle">@countryContent.Title</a></h2>
                             <ul class="publish-detail">
                                 <li><i class="icon anm anm-clock-r"></i> <time>@countryContent.CreatedDate.ToTurkishDateString()</time></li>
-                                <li><i class="anm anm-eye-r" aria-hidden="true"></i> @countryContent.ReadCount @L["Views"]</li>
+                        @*        <li><i class="anm anm-eye-r" aria-hidden="true"></i> @countryContent.ReadCount @L["Views"]</li>
                                 <li>
                                     <ul class="inline-list">
-                                        <li><i class="icon anm anm-comments-l"></i> <a href="#"> 0 @L["Comments"]</a></li>
+                                        <li><i class="icon anm anm-comments-l"></i> 0 @L["Comment"]</li>
                                     </ul>
-                                </li>
+                                </li>*@
                             </ul>
                             <div class="rte">
                                 <p>@countryContent.ShortDescription.ApplyShortening(200)</p>
                             </div>
-                            <p><a href="#" class="btn btn-secondary btn--small">@L["ReadMore"] <i class="fa fa-caret-right" aria-hidden="true"></i></a></p>
+                            <p><a href="/Country/Detail?Id=@countryContent.Id" class="btn btn-secondary btn--small">@L["ReadMore"] <i class="fa fa-caret-right" aria-hidden="true"></i></a></p>
                         </div>
                     }
 
