--- a/src/WorldTravel.Web/Pages/Shared/_Layout.cshtml
+++ b/src/WorldTravel.Web/Pages/Shared/_Layout.cshtml
@@ -38,10 +38,10 @@
     <link rel="stylesheet" href="/web/css/bootstrap.min.css">
     <link href="~/libs/toastr/toastr.min.css" rel="stylesheet" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-    <!-- Main Style CSS -->
+@*    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+*@
+@*    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+*@    <!-- Main Style CSS -->
     @*    <link href="~/libs/abp/core/abp.css" rel="stylesheet" /> *@
     <link rel="stylesheet" href="/web/css/style.css">
     <link rel="stylesheet" href="/web/css/responsive.css">
@@ -318,20 +318,20 @@
                     jQuery('#modalOverly').fadeOut();
                 });
 
-                var visits = jQuery.cookie('visits') || 0;
-                visits++;
-                jQuery.cookie('visits', visits, { expires: 1, path: '/' });
-                console.debug(jQuery.cookie('visits'));
-                if (jQuery.cookie('visits') > 1) {
-                    jQuery('#modalOverly').hide();
-                    jQuery('#popup-container').hide();
-                } else {
-                    var pageHeight = jQuery(document).height();
-                    jQuery('<div id="modalOverly"></div>').insertBefore('body');
-                    jQuery('#modalOverly').css("height", pageHeight);
-                    jQuery('#popup-container').show();
-                }
-                if (jQuery.cookie('noShowWelcome')) { jQuery('#popup-container').hide(); jQuery('#active-popup').hide(); }
+                //var visits = jQuery.cookie('visits') || 0;
+                //visits++;
+                //jQuery.cookie('visits', visits, { expires: 1, path: '/' });
+                //console.debug(jQuery.cookie('visits'));
+                //if (jQuery.cookie('visits') > 1) {
+                //    jQuery('#modalOverly').hide();
+                //    jQuery('#popup-container').hide();
+                //} else {
+                //    var pageHeight = jQuery(document).height();
+                //    jQuery('<div id="modalOverly"></div>').insertBefore('body');
+                //    jQuery('#modalOverly').css("height", pageHeight);
+                //    jQuery('#popup-container').show();
+                //}
+                //if (jQuery.cookie('noShowWelcome')) { jQuery('#popup-container').hide(); jQuery('#active-popup').hide(); }
             });
 
             jQuery(document).mouseup(function (e) {
