--- a/src/WorldTravel.Web/Index.cshtml
+++ b/src/WorldTravel.Web/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model WorldTravel.Web.Pages.IndexModel
+@model WorldTravel.Web.IndexModel
 @*<div class="jumbotron text-center">
     <h1>Uygulamaya Hoşgeldiniz TEST</h1>
     <div class="row">
