Bazı  jpg dosyalar silindi.

--- a/src/WorldTravel.Web/Pages/Home/Index.cshtml
+++ b/src/WorldTravel.Web/Pages/Home/Index.cshtml
@@ -31,7 +31,7 @@
     <div class="home-slideshow">
         <div class="slide slideshow--medium">
             <div class="blur-up lazyload">
-                <img class="blur-up lazyload" data-src="/web/images/slideshow-banners/home12-category-banner1.jpg" src="/web/images/slideshow-banners/home12-category-banner1.jpg" alt="Outfit of Today" title="Outfit of Today" />
+                <img class="blur-up lazyload" data-src="/web/images/home/home6.jpg" src="/web/images/home/home6.jpg" alt="Outfit of Today" title="Outfit of Today" />
                 <div class="slideshow__text-wrap slideshow__overlay classic middle">
                     <div class="slideshow__text-content classic left">
                         <div class="container">
@@ -47,7 +47,7 @@
         </div>
         <div class="slide slideshow--medium">
             <div class="blur-up lazyload">
-                <img class="blur-up lazyload" data-src="/web/images/slideshow-banners/home12-category-banner2.jpg" src="/web/images/slideshow-banners/home12-category-banner2.jpg" alt="Accessories" title="Accessories" />
+                <img class="blur-up lazyload" data-src="/web/images/home/home7.jpg" src="/web/images/home/home7.jpg" alt="Accessories" title="Accessories" />
                 <div class="slideshow__text-wrap slideshow__overlay classic middle">
                     <div class="slideshow__text-content classic left">
                         <div class="container">
